Agora a automação está funcionando. Arrumei a parte do Get Title e input text

--- a/log.html
+++ b/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,969],[],[[1,0,0,[5],[0,819,148,6],[[0,7,0,0,0,0,0,0,[0,822,140],[[0,8,9,0,10,11,0,0,[0,823,135],[[824,2,12],[836,2,13],[880,2,14],[880,5,6]]]]],[0,15,0,0,0,0,0,0,[3,964,0],[]],[0,16,0,0,0,0,0,0,[3,965,0],[]],[0,17,0,0,0,0,0,0,[3,965,0],[]]]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,9336],[],[[1,0,0,[5],[1,428,8905],[[0,6,0,0,0,0,0,0,[1,430,3161],[[0,7,8,0,9,10,0,0,[1,431,3160],[[432,2,11]]]]],[0,12,0,0,0,0,0,0,[1,3592,3482],[[0,13,14,0,15,16,0,0,[1,3593,3],[[3595,2,17]]],[0,18,8,0,19,20,0,0,[1,3596,206],[[3598,2,21]]],[0,22,8,0,23,24,0,0,[1,3803,3271],[[3804,2,25],[4097,2,26],[4098,2,27]]]]],[0,28,0,0,0,0,0,0,[1,7075,16],[[0,29,8,0,30,0,31,0,[1,7076,9],[[7085,2,32]]],[0,33,14,0,34,35,0,0,[1,7086,4],[]]]],[0,36,0,0,0,0,0,0,[1,7092,2241],[[0,37,8,0,38,0,0,0,[1,7092,2240],[]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Consulta Google","*C:\\Iterasys\\robot_framework\\133PetsRobotFramework\\consulta_google.robot","*consulta_google.robot","*<p>Testes de consulta noo buscador Google Abre o navegador e realiza a consulta e realiza a consulta\x3c/p>","*completo, rapido","*WebDriverException: Message: 'geckodriver' executable needs to be in PATH. \n","*Acessar o Chrome na pagina &lt;https://www.google.com.br&gt;","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url} ${browser}","*Opening browser 'firefox' to base url '<a href=\"https://www.google.com.br\">https://www.google.com.br\x3c/a> Chrome'.","*Firefox driver log is always forced to to: C:\\Iterasys\\robot_framework\\133PetsRobotFramework\\geckodriver-1.log","*Cannot capture screenshot because no browser is open.","*No campo de pesquisa digitar &quot;Ovos de Páscoa&quot;","*Validar se aparece no titulo da guia o resultado esperado","*Fechar o browser"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Consulta Google","*C:\\Iterasys\\robot_framework\\133PetsRobotFramework\\consulta_google.robot","*consulta_google.robot","*<p>Testes de consulta noo buscador Google Abre o navegador e realiza a consulta e realiza a consulta\x3c/p>","*completo, rapido","*Acessar o Chrome na pagina &lt;https://www.google.com.br&gt;","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}, ${browser}","*Opening browser 'Chrome' to base url '<a href=\"https://www.google.com.br\">https://www.google.com.br\x3c/a>'.","*Digite &quot;Ovos de páscoa&quot; na barra de pesquisa","*Set Test Variable","*BuiltIn","*<p>Makes a variable available everywhere within the scope of the current test.\x3c/p>","*${termo}","*${termo} = Ovos de páscoa","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name = q, ${termo}","*Typing text 'Ovos de páscoa' into text field 'name = q'.","*Press Keys","*<p>Simulates the user pressing key(s) to an element or on the active browser.\x3c/p>","*name = q, ENTER","*Sending key(s) ('ENTER',) to name = q element.","*Pressing special key ENTER to element.","*Releasing special key ENTER.","*Validar se aparece no titulo da guia o resultado esperado","*Get Title","*<p>Returns the title of the current page.\x3c/p>","*${titulo}","*${titulo} = Ovos de páscoa - Pesquisa Google","*Should Contain","*<p>Fails if <code>container\x3c/code> does not contain <code>item\x3c/code> one or more times.\x3c/p>","*${titulo}, ${termo}","*Fechar o browser","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":1,"label":"completo, rapido","pass":0,"skip":0}],[{"elapsed":"00:00:01","fail":1,"id":"s1","label":"Consulta Google","name":"Consulta Google","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:09","fail":0,"label":"completo, rapido","pass":1,"skip":0}],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Consulta Google","name":"Consulta Google","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1660679506406;
+window.output["baseMillis"] = 1661279391709;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 990;
+window.output["generated"] = 9366;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
