--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,969],[],[[1,0,0,[5],[0,819,148,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,9336],[],[[1,0,0,[5],[1,428,8905],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Consulta Google","*C:\\Iterasys\\robot_framework\\133PetsRobotFramework\\consulta_google.robot","*consulta_google.robot","*<p>Testes de consulta noo buscador Google Abre o navegador e realiza a consulta e realiza a consulta\x3c/p>","*completo, rapido","*WebDriverException: Message: 'geckodriver' executable needs to be in PATH. \n"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Consulta Google","*C:\\Iterasys\\robot_framework\\133PetsRobotFramework\\consulta_google.robot","*consulta_google.robot","*<p>Testes de consulta noo buscador Google Abre o navegador e realiza a consulta e realiza a consulta\x3c/p>","*completo, rapido"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":1,"label":"completo, rapido","pass":0,"skip":0}],[{"elapsed":"00:00:01","fail":1,"id":"s1","label":"Consulta Google","name":"Consulta Google","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:09","fail":0,"label":"completo, rapido","pass":1,"skip":0}],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Consulta Google","name":"Consulta Google","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1660679506406;
+window.output["baseMillis"] = 1661279391709;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 990;
+window.output["generated"] = 9366;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
