--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,9336],[],[[1,0,0,[5],[1,428,8905],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,18548],[],[[5,0,0,[6],[0,568,17972,7],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Consulta Google","*C:\\Iterasys\\robot_framework\\133PetsRobotFramework\\consulta_google.robot","*consulta_google.robot","*<p>Testes de consulta noo buscador Google Abre o navegador e realiza a consulta e realiza a consulta\x3c/p>","*completo, rapido"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Consulta Petz","*C:\\Iterasys\\robot_framework\\133PetsRobotFramework\\consulta_petz.robot","*consulta_petz.robot","*<p>Consultas no site da Petz\x3c/p>","*Consulta produto","*rapido","*Element with locator 'css = h2Categoria.nomeCategoria' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:09","fail":0,"label":"completo, rapido","pass":1,"skip":0}],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"Consulta Google","name":"Consulta Google","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:18","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:18","fail":1,"label":"rapido","pass":0,"skip":0}],[{"elapsed":"00:00:19","fail":1,"id":"s1","label":"Consulta Petz","name":"Consulta Petz","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1661279391709;
+window.output["baseMillis"] = 1661363085567;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 9366;
+window.output["generated"] = 18580;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
